Adding some small curious research items.

--- a/java/Collections.ipynb
+++ b/java/Collections.ipynb
@@ -121,6 +121,47 @@
   },
   {
    "cell_type": "markdown",
+   "id": "38a66e23",
+   "metadata": {},
+   "source": [
+    "# Array Concatenation\n",
+    "\n",
+    "There is no Python-style (or string-style) + concat in Java for arrays.  You have to manually reconstruct it or use streams as shown here.  There isn't a fluent API method like with strings either."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "096a1c0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.stream.IntStream;\n",
+    "\n",
+    "class ArrayConcatDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        int[] a = {1, 2};\n",
+    "        int[] b = {3, 4};\n",
+    "        \n",
+    "        // int[] c = a + b; // ILLEGAL\n",
+    "        int[] c = IntStream.concat(IntStream.of(a), IntStream.of(b)).toArray();\n",
+    "        \n",
+    "        System.out.println(Arrays.toString(c));\n",
+    "    }\n",
+    "}\n",
+    "ArrayConcatDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9c63a48e",
    "metadata": {},
    "source": [
@@ -137,12 +178,14 @@
     "- It demonstrates iterating over the `LinkedList` using an enhanced for loop.\n",
     "- Finally, an element is removed from the `LinkedList` using the `remove` method.\n",
     "\n",
-    "The output of the code is printed to demonstrate the various operations performed on the `ArrayList` and `LinkedList`."
+    "The output of the code is printed to demonstrate the various operations performed on the `ArrayList` and `LinkedList`.\n",
+    "\n",
+    "NOTE: there is no Perl-style reification here - you cannot set past the current end of the list, even by one element."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "a641d257",
    "metadata": {},
    "outputs": [
@@ -219,6 +262,7 @@
     "        linkedList.add(10);\n",
     "        linkedList.add(20);\n",
     "        linkedList.add(30);\n",
+    "        // linkedList.set(3, 40); // ILLEGAL - can't add to end this way\n",
     "\n",
     "        // Printing the LinkedList\n",
     "        System.out.println(\"LinkedList: \" + linkedList);\n",
@@ -1866,15 +1910,25 @@
     "# Primitive Types vs. Boxed Types in Arrays\n",
     "\n",
     "- You __cannot cast between__ (implicitly or explicitly) primitive and boxed types over whole arrays.  You would have to iterate.\n",
-    "- You can cast __Object[] to Integer[]__ (for instance), but it may throw an __exception if wrong element type__ (maybe not until retrieval though).\n"
+    "- You can cast __Object[] to Integer[]__ (for instance), but it may throw an __exception if wrong element type__ (maybe not until retrieval though).\n",
+    "\n",
+    "NOTE: this only works if the array itself is the right type to make it work.  Even if all the elements are Integer, casting Object[] to Integer[] won't work if the array itself is Object[].  This will depend on how the array itself was constructed."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 4,
    "id": "3d01d3a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "public class ArrayTypingDemo {\n",
     "    public static void main(String[] args) {\n",
@@ -1882,6 +1936,7 @@
     "        \n",
     "        // Casting (assuming elements are right)\n",
     "        Integer[] intArr = (Integer[])objArr;\n",
+    "        System.out.println(intArr[0]);\n",
     "        // If you don't know, you need to iterate and check the types.\n",
     "        // An exception will be thrown if any items are not Integer.\n",
     "        \n",
