--- a/java/Functional Programming.ipynb
+++ b/java/Functional Programming.ipynb
@@ -301,6 +301,103 @@
   },
   {
    "cell_type": "markdown",
+   "id": "596cb4d0",
+   "metadata": {},
+   "source": [
+    "# Ambiguous Method Reference\n",
+    "\n",
+    "Notice that the compiler was able to figure out which one to use based on the context."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "313da8dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f2\n"
+     ]
+    }
+   ],
+   "source": [
+    "interface MyInterface {\n",
+    "    void h(int a, int b);\n",
+    "}\n",
+    "\n",
+    "class MyClass {\n",
+    "    void f(int n) { System.out.println(\"f1\");}\n",
+    "    void f(int m, int n) { System.out.println(\"f2\");}\n",
+    "}\n",
+    "\n",
+    "class AmbiguousDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        MyInterface fn = (new MyClass())::f;\n",
+    "        fn.h(10, 20);\n",
+    "    }\n",
+    "}\n",
+    "AmbiguousDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ed6b412",
+   "metadata": {},
+   "source": [
+    "# Constructor Method Reference\n",
+    "\n",
+    "- use `new` as the name of the constructor (not the class) for this purpose\n",
+    "- pretend it is __static__ (no `this` and all c'tor args are args to the method)\n",
+    "- pretend this static method __returns an instance__\n",
+    "- for array, assume it takes a length arg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "ba9264c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "interface MyInterface {\n",
+    "    MyClass m(int n);\n",
+    "}\n",
+    "\n",
+    "interface MyArrInterface {\n",
+    "    int[] f(int a);\n",
+    "}\n",
+    "\n",
+    "class MyClass {\n",
+    "    MyClass(int n) {System.out.println(n);}\n",
+    "}\n",
+    "\n",
+    "class CtorReferenceDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        MyInterface fn = MyClass::new;\n",
+    "        fn.m(10);\n",
+    "        \n",
+    "        MyArrInterface fn2 = int[]::new;\n",
+    "        int[] a = fn2.f(100);\n",
+    "        System.out.println(a.length);\n",
+    "    }\n",
+    "}\n",
+    "CtorReferenceDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b00dae8c",
    "metadata": {},
    "source": [
@@ -655,6 +752,68 @@
     "    }\n",
     "}\n",
     "RangeDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14356c01",
+   "metadata": {},
+   "source": [
+    "## Array from Stream\n",
+    "\n",
+    "`Collectors` doesn't deal with arrays - only collections (which are generic).\n",
+    "\n",
+    "Streams have a `toArray()` method with 2 overloads\n",
+    "    - no args = `Object[]` that cannot be cast to the proper type\n",
+    "    - single arg = function to allocate a new array of the right size\n",
+    "        - generally looks like `T[]::new`\n",
+    "            - cannot be used for primitives because function is generic\n",
+    "The methods of stream such as `mapToInt()` are useful for converting to a primitive stream.\n",
+    "\n",
+    "Primitive streams can be trivially turned into arrays with no args because they're defined as such (the member is not a virtual from base)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "0e74eb58",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "[1, 2, 3]\n",
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.stream.Stream;\n",
+    "import java.util.stream.IntStream;\n",
+    "import java.util.stream.Collectors;\n",
+    "\n",
+    "class ToArrayDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        // Primitive stream\n",
+    "        IntStream s = IntStream.of(1, 2, 3);\n",
+    "        int[] a = s.toArray();\n",
+    "        System.out.println(Arrays.toString(a));\n",
+    "        \n",
+    "        // Generic stream\n",
+    "        Stream<Integer> s2 = Stream.of(1, 2, 3);\n",
+    "        Integer[] a2 = (s2.toArray(Integer[]::new));\n",
+    "        System.out.println(Arrays.toString(a2));\n",
+    "        \n",
+    "        // Generic to primitive array\n",
+    "        Stream<Integer> s3 = Stream.of(1, 2, 3);\n",
+    "        int[] a3 = s3.mapToInt(n -> n).toArray(); // auto-unboxing\n",
+    "        // could have also used Integer::intValue\n",
+    "        System.out.println(Arrays.toString(a3));\n",
+    "    }\n",
+    "}\n",
+    "ToArrayDemo.main(null);"
    ]
   },
   {
@@ -1208,6 +1367,42 @@
     "    }\n",
     "}\n",
     "AutocloseDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8b76326",
+   "metadata": {},
+   "source": [
+    "## Fibonacci Using Streams"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "fae8e334",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 1, 2, 3, 5, 8, 13, 21, 34]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.stream.Stream;\n",
+    "\n",
+    "class FibDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        IntStream fibCalcStream = Stream.iterate(new int[] {0, 1}, a -> new int[] {a[1], a[0] + a[1]})\n",
+    "                                        .mapToInt(a -> a[1]).limit(9);\n",
+    "        IntStream fibStream = IntStream.concat(IntStream.of(0), fibCalcStream);\n",
+    "        System.out.println(Arrays.toString(fibStream.toArray()));\n",
+    "    }\n",
+    "}\n",
+    "FibDemo.main(null);"
    ]
   },
   {
