Improving fib stream example.

--- a/java/Functional Programming.ipynb
+++ b/java/Functional Programming.ipynb
@@ -1379,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "id": "fae8e334",
    "metadata": {},
    "outputs": [
@@ -1393,13 +1393,13 @@
    ],
    "source": [
     "import java.util.stream.Stream;\n",
+    "import java.util.stream.IntStream;\n",
     "\n",
     "class FibDemo {\n",
     "    public static void main(String[] args) {\n",
     "        IntStream fibCalcStream = Stream.iterate(new int[] {0, 1}, a -> new int[] {a[1], a[0] + a[1]})\n",
-    "                                        .mapToInt(a -> a[1]).limit(9);\n",
-    "        IntStream fibStream = IntStream.concat(IntStream.of(0), fibCalcStream);\n",
-    "        System.out.println(Arrays.toString(fibStream.toArray()));\n",
+    "                                        .mapToInt(a -> a[0]).limit(10);\n",
+    "        System.out.println(Arrays.toString(fibCalcStream.toArray()));\n",
     "    }\n",
     "}\n",
     "FibDemo.main(null);"
