Adding more notes based on random overnight questions.

--- a/java/Collections.ipynb
+++ b/java/Collections.ipynb
@@ -287,6 +287,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c5ed16ff",
+   "metadata": {},
+   "source": [
+    "# ArrayList Capacity\n",
+    "\n",
+    "There are no members to check or increase the capacity of an `ArrayList` like in C++, but there is a __constructor overload__ that takes an __initial capacity__."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6b8fd33e",
    "metadata": {},
    "source": [
@@ -1151,6 +1161,99 @@
     "}\n",
     "\n",
     "SlicingDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cecd007d",
+   "metadata": {},
+   "source": [
+    "# Sublist\n",
+    "\n",
+    "Similar to how `Arrays.asList()` gives you a list view on an array, `list.subList()` gives you a smaller list view on a list.\n",
+    "\n",
+    "However, unlike the array version, subList lets you change the length, which will result in inserting items in the middle of the original.  This won't work, of course, if the list is an asList from an array.\n",
+    "\n",
+    "While in-place modifications are seen by all sublists in a chain at the same time, changing the length only works if done in the most derived sublist.  Changing a source length directly will cause an exception to be thrown next time you read from a sublist.\n",
+    "\n",
+    "NOTE: if doing deep recursion on smaller and smaller sublists, such as in __Quicksort__, sublists may be overkill since you get a delegating chain of ~log(n) sublist instances."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c605d9ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 2, 3]\n",
+      "[10]\n",
+      "\n",
+      "[10, 4]\n",
+      "[10, 4, 2]\n",
+      "[10, 4, 2, 3]\n",
+      "\n",
+      "[10, 4, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.List;\n",
+    "import java.util.ArrayList;\n",
+    "\n",
+    "class SublistDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        List<Integer> l = new ArrayList<>();\n",
+    "        l.add(1);\n",
+    "        l.add(2);\n",
+    "        l.add(3);\n",
+    "        \n",
+    "        List<Integer> l1 = l.subList(0, 2);\n",
+    "        List<Integer> l2 = l1.subList(0, 1);\n",
+    "        \n",
+    "        // In-place modification visible to all.\n",
+    "        l.set(0, 10);\n",
+    "        System.out.println(l);\n",
+    "        System.out.println(l2);\n",
+    "        System.out.println();\n",
+    "        \n",
+    "        // Changing length of subList updates all\n",
+    "        // parents.\n",
+    "        l2.add(4);\n",
+    "        System.out.println(l2);\n",
+    "        System.out.println(l1);\n",
+    "        System.out.println(l);\n",
+    "        System.out.println();\n",
+    "        \n",
+    "        // Changing length of source invalidates others\n",
+    "        // next time they are used.\n",
+    "        l.add(4);\n",
+    "        System.out.println(l);\n",
+    "        // System.out.println(l2); // EXCEPTION\n",
+    "    }\n",
+    "}\n",
+    "SublistDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad79a922",
+   "metadata": {},
+   "source": [
+    "# Sub-Array\n",
+    "\n",
+    "There is __no way__ to directly take a portion of an array like in C++, without making a copy.  To do that, you have to either pass the original and indices around, or you can make your own wrapper like this:\n",
+    "\n",
+    "```Java\n",
+    "class ArraySlice {\n",
+    "    int[] arr;\n",
+    "    int start;\n",
+    "    int length;\n",
+    "}\n",
+    "```"
    ]
   },
   {
@@ -2116,12 +2219,94 @@
    "id": "3247084d",
    "metadata": {},
    "source": [
-    "# Bitfields\n",
+    "# Bitfields (EnumSet)\n",
     "\n",
-    "- `EnumSet` and `EnumMap` are implementations of `Set` and `Map` that use values of an enum as keys\n",
-    "- you pass the enum's type into the constructor so it knows how to alloate and deal with keys\n",
-    "- then you pass in enum values as keys\n",
-    "- the main advantage is that it can compute the minimum bits required to store a value of the enum and compact all the entries into a smaller amount of space"
+    "- `EnumSet` is an implementation of `Set` that gives each enum value its own bit in a bitmask.\n",
+    "- you create one with __static methods__ of `EnumSet` and then treat like any other set.\n",
+    "- the instance is linked to a specific enum type."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "18fb61e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[VAL0, VAL1]\n",
+      "[VAL0, VAL1, VAL2]\n",
+      "[VAL1]\n",
+      "[VAL0, VAL2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.Set;\n",
+    "import java.util.EnumSet;\n",
+    "\n",
+    "enum MyEnum {\n",
+    "    VAL0,\n",
+    "    VAL1,\n",
+    "    VAL2\n",
+    "}\n",
+    "\n",
+    "class EnumSetDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        Set<MyEnum> s = EnumSet.of(MyEnum.VAL1, MyEnum.VAL0);\n",
+    "        System.out.println(s);\n",
+    "        \n",
+    "        s = EnumSet.allOf(MyEnum.class);\n",
+    "        System.out.println(s);\n",
+    "        \n",
+    "        s = EnumSet.noneOf(MyEnum.class);\n",
+    "        s.add(MyEnum.VAL1);\n",
+    "        System.out.println(s);\n",
+    "        \n",
+    "        s = EnumSet.complementOf((EnumSet<MyEnum>)s);\n",
+    "        System.out.println(s);\n",
+    "    }\n",
+    "}\n",
+    "EnumSetDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d47c2e8",
+   "metadata": {},
+   "source": [
+    "# EnumMap\n",
+    "\n",
+    "`EnumMap` acts just like a normal map (eg. `HashMap`), but it takes an enum type for keys, either directly or via copy constructor.\n",
+    "\n",
+    "Internally, it uses a more __compact array__ representation based on knowledge of the maximum # of possible keys."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "bb847230",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import java.util.Map;\n",
+    "import java.util.EnumMap;\n",
+    "\n",
+    "enum MyEnum {\n",
+    "    VAL0,\n",
+    "    VAL1,\n",
+    "    VAL2\n",
+    "}\n",
+    "\n",
+    "class EnumMapDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        Map<MyEnum, String> m = new EnumMap(MyEnum.class);\n",
+    "        Map<MyEnum, String> n = new EnumMap(m);\n",
+    "    }\n",
+    "}\n",
+    "EnumMapDemo.main(null);"
    ]
   },
   {
@@ -2189,9 +2374,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2937f2c0",
+   "metadata": {},
+   "source": [
+    "# Swapping\n",
+    "\n",
+    "There is no general `swap` like in C++ because there are no ref parameters.\n",
+    "\n",
+    "`Collections.swap(list, index1, index2)` lets you swap two items in a `List` specifically.  There is no equivalent for arrays."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d24249d",
+   "id": "5ff125b9",
    "metadata": {},
    "outputs": [],
    "source": []
