--- a/java/Standard library.ipynb
+++ b/java/Standard library.ipynb
@@ -166,7 +166,7 @@
     "3. Rounding: The `round()` method rounds a floating-point value to the nearest integer.\n",
     "4. Random number generation: The `nextInt()` method of the `Random` class generates a random integer within the specified range.\n",
     "5. Exponential and logarithmic functions: The `pow()`, `sqrt()`, and `log()` methods compute the power, square root, and natural logarithm of a number respectively.\n",
-    "6. Trigonometric functions: The `sin()`, `cos()`, and `tan()` methods calculate the sine, cosine, and tangent of an angle respectively.\n",
+    "6. Trigonometric functions: The `sin()`, `cos()`, and `tan()` methods calculate the sine, cosine, and tangent of an angle in radians respectively.\n",
     "\n",
     "Each functionality is demonstrated with appropriate inputs and the expected outputs are printed."
    ]
