--- a/java/Variables.ipynb
+++ b/java/Variables.ipynb
@@ -311,6 +311,46 @@
   },
   {
    "cell_type": "markdown",
+   "id": "534b950a",
+   "metadata": {},
+   "source": [
+    "# Exponential Notation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d93a27cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0E9\n",
+      "7.9E-10\n",
+      "1.0E9\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ExpDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        double x1 = 1E9;\n",
+    "        double x2 = 0.79E-9;\n",
+    "        // double x3 = E9; // NO\n",
+    "        float x4 = 1E+9f;\n",
+    "        \n",
+    "        System.out.println(x1);\n",
+    "        System.out.println(x2);\n",
+    "        System.out.println(x4);\n",
+    "    }\n",
+    "}\n",
+    "ExpDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8fbf9a23",
    "metadata": {},
    "source": [
@@ -425,12 +465,14 @@
     "8. The modified value of the static variable is printed.\n",
     "9. The static method `staticMethod()` is called.\n",
     "\n",
-    "When the code is executed, it will print the expected output as mentioned in the comments. The static variable can be accessed and modified without creating an instance of the class. Static methods can be called directly using the class name. Static blocks are executed only once when the class is loaded."
+    "When the code is executed, it will print the expected output as mentioned in the comments. The static variable can be accessed and modified without creating an instance of the class. Static methods can be called directly using the class name. Static blocks are executed only once when the class is loaded.\n",
+    "\n",
+    "NOTE: Unlike in C++, you cannot have inline static variables in code.  They must be class members."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f7f3ff05",
    "metadata": {
     "vscode": {
@@ -474,6 +516,8 @@
     "\n",
     "        // Accessing static method\n",
     "        staticMethod(); // Expected output: This is a static method.\n",
+    "        \n",
+    "        // static int x = 100; // ILLEGAL\n",
     "    }\n",
     "}\n",
     "\n",
