Adding more detail about built-in functional interfaces.

--- a/java/Functional Programming.ipynb
+++ b/java/Functional Programming.ipynb
@@ -105,7 +105,9 @@
    "source": [
     "# Functional Interface Members\n",
     "\n",
-    "It is worth noting that a functional interface can have __static__ members that can be called on the interface and do not interfer with the fact that the one public abstract method is the one used for calling functions."
+    "It is worth noting that a functional interface can have __static__ and __default__ members that can be called on the interface and do not interfer with the fact that the one public abstract method is the one used for calling functions.\n",
+    "\n",
+    "The fact that default members are allowed is interesting in that it allows you to add functionality to a functional interface, such as function composition."
    ]
   },
   {
@@ -1443,9 +1445,89 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c5f9e774",
+   "metadata": {},
+   "source": [
+    "# Important Built-in Functional Interfaces\n",
+    "\n",
+    "Most are in `java.util.function` unless otherwise noted.\n",
+    "\n",
+    "In general, statics and defaults are both for getting new instances of the interfaces, never for mutating existing ones.\n",
+    "\n",
+    "- `java.lang.Runnable`\n",
+    "    - `void run()`\n",
+    "- `java.util.concurrent.Callable<V>`\n",
+    "    - `V call() throws Exception`\n",
+    "    \n",
+    "- `Predicate<T>`\n",
+    "    - `boolean test(T t)`\n",
+    "    - default methods:\n",
+    "        - `and(predicate)` and `or(predicate)` to combine two predicates\n",
+    "        - `negate()` to negate the predicate\n",
+    "    - static methods:\n",
+    "        - `isEqual(obj)` to get predicate that tests if passed object equals this object with `Object.equals`\n",
+    "        \n",
+    "- `Consumer<T>`\n",
+    "    - `void accept(T val)`\n",
+    "    - default methods:\n",
+    "        - `andThen(consumder)` for chaining on each value\n",
+    "- `Supplier<T>`\n",
+    "    - `T get()`\n",
+    "\n",
+    "- `Function<Targ, Treturn>`\n",
+    "    - `Treturn apply(Targ arg)`\n",
+    "    - default methods: \n",
+    "        - `compose(function)` to call some other function before this one\n",
+    "        - `andThen(function)` to call this function and then another one\n",
+    "    - static methods:\n",
+    "        - `identity()` to get function that just returns its arg\n",
+    "- `BiFunction<T1, T2, TReturn>`\n",
+    "    - `TReturn apply(T1 t1, T2 t2)`\n",
+    "    - default methods:\n",
+    "        - `andThen(function)` to transform the result\n",
+    "\n",
+    "- `UnaryOperator<T>`\n",
+    "    - `Function<T, T>` with all its members\n",
+    "- `BinaryOperator<T>`\n",
+    "    - `BiFunction<T, T, T>` with all its members\n",
+    "    - static member:\n",
+    "        - `maxBy(comparator)` and `minBy(comparator)`\n",
+    "        \n",
+    "There are also various combinations of the above with primitives, to get around the fact that generics can't do primitives. Keep in mind these observations:\n",
+    "- composition default methods tend to stick to their own specific type\n",
+    "- when the primitive is a return type, add 'AsType' to the method name\n",
+    "- when the primitive is an argument type, the method is unchanged\n",
+    "\n",
+    "Here are some examples of the primitive versions:\n",
+    "- eg. `BooleanSupplier`\n",
+    "    - `.getAsBoolean()`\n",
+    "- eg. `DoubleBinaryOperator`\n",
+    "    - `.applyAsDouble(d1, d2)`\n",
+    "- eg. `DoubleFunction<R>`\n",
+    "    - `.apply(d)`\n",
+    "- eg. `DoubleToIntFunction`\n",
+    "    - `.applyAsInt(d)`\n",
+    "- eg. `ObjectIntConsumer`\n",
+    "    - `.accept(obj, n)`\n",
+    "- eg. `ToIntFunction<T>` // note this is different from IntFunction!\n",
+    "    - `.applyAsInt(T t)`\n",
+    "- eg. `ToLongBiFunction<T1, T2>`\n",
+    "    - `.applyAsLong(T1 t1, T2 t2)`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3690a10",
+   "id": "94d4b82b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "676829d4",
    "metadata": {},
    "outputs": [],
    "source": []
